[package]
name = "atleta-runtime"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
hex-literal = { workspace = true }
static_assertions = "1.1"

# Substrate
sp-api = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-block-builder = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-beefy = { workspace = true }
binary-merkle-tree = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-mmr-primitives = { workspace = true, default-features = false }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-statement-store = { workspace = true }
sp-version = { workspace = true }
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support = { workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-authority-discovery = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-beefy = { workspace = true }
pallet-beefy-mmr = { workspace = true }
pallet-collective = { workspace = true }
pallet-contracts = { workspace = true }
pallet-democracy = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-elections-phragmen = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-im-online = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-membership = { workspace = true }
pallet-mmr = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-nomination-pools = { workspace = true }
pallet-nomination-pools-runtime-api = { workspace = true }
pallet-offences = { workspace = true }
pallet-offences-benchmarking = { workspace = true, optional = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-staking-runtime-api = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-fast-unstake = { workspace = true }
pallet-xcm = { workspace = true }
xcm-fee-payment-runtime-api = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Frontier
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-dispatch = { workspace = true }
pallet-hotfix-sufficients = { workspace = true }

# Atleta Pallets
pallet-faucet = { workspace = true }

# Atleta Precompile Pallets
pallet-evm-precompile-staking = { workspace = true }
pallet-evm-precompile-faucet = { workspace = true }
pallet-evm-precompile-nomination-pools = { workspace = true }
pallet-evm-precompile-babe = { workspace = true }
pallet-evm-precompile-governance = { workspace = true }
pallet-evm-precompile-treasury = { workspace = true }
pallet-evm-precompile-preimage = { workspace = true }

# Parachains
runtime-parachains = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }
runtime-common = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std", "with-rocksdb-weights", "mainnet-runtime"]
with-rocksdb-weights = []
with-paritydb-weights = []
mainnet-runtime = []
testnet-runtime = []
devnet-runtime = []
try-runtime = [
    "fp-self-contained/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-base-fee/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-base-fee/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-contracts/try-runtime",
    "pallet-dynamic-fee/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-ethereum/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-elections-phragmen/try-runtime",
    "pallet-evm-chain-id/try-runtime",
    "pallet-faucet/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-hotfix-sufficients/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-nomination-pools/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-fast-unstake/try-runtime"
]
std = [
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    # Substrate
    "sp-api/std",
    "sp-authority-discovery/std",
    "sp-block-builder/std",
    "sp-genesis-builder/std",
    "sp-consensus-babe/std",
    "sp-consensus-beefy/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-mmr-primitives/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-statement-store/std",
    "sp-version/std",
    "substrate-wasm-builder",
    # Substrate FRAME
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system-benchmarking?/std",
    "frame-try-runtime?/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-bags-list/std",
    "pallet-balances/std",
    "pallet-beefy/std",
    "pallet-beefy-mmr/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-democracy/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-elections-phragmen/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-membership/std",
    "pallet-message-queue/std",
    "pallet-mmr/std",
    "pallet-nomination-pools/std",
    "pallet-nomination-pools-runtime-api/std",
    "pallet-offences/std",
    "pallet-preimage/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-staking-runtime-api/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-fast-unstake/std",
    # Frontier
    "fp-account/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    # Frontier FRAME
    "pallet-base-fee/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-dispatch/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm/std",
    "pallet-hotfix-sufficients/std",
    # Parachains
    "runtime-parachains/std",
    # Polkadot
    "runtime-common/std",
    # XCM
    "xcm/std",
    "xcm-executor/std",
    "xcm-builder/std",
    "pallet-xcm/std",
    "xcm-fee-payment-runtime-api/std",
    # Atleta Pallets
    "pallet-faucet/std",
    # Atleta Precompile Pallets
    "pallet-evm-precompile-staking/std",
    "pallet-evm-precompile-faucet/std",
    "pallet-evm-precompile-nomination-pools/std",
    "pallet-evm-precompile-babe/std",
    "pallet-evm-precompile-governance/std",
    "pallet-evm-precompile-treasury/std",
    "pallet-evm-precompile-preimage/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",
    "pallet-hotfix-sufficients/runtime-benchmarks",
    "pallet-offences-benchmarking",
    "pallet-contracts/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
]
